2010-07-03  Juanma Barranquero  <lekktu@gmail.com>

	* ebrowse.c (match_qualified_namespace_alias): Check for null pointer.

2010-07-03  Juanma Barranquero  <lekktu@gmail.com>

	Fix prototype warnings.

	* ebrowse.c (match_qualified_namespace_alias):
	Pass sym* to find_namespace, not link*.

	* emacsclient.c (send_to_emacs, quote_argument): Arg s is HSOCKET.

	* sorted-doc.c (qsort_compare): New typedef.
	(main): Use it to cast cmpdoc.

2010-07-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* update-game-score.c: Convert function definitions to standard C.
	* sorted-doc.c:
	* profile.c:
	* pop.c:
	* movemail.c:
	* make-docfile.c:
	* hexl.c:
	* fakemail.c:
	* etags.c:
	* ebrowse.c:
	* digest-doc.c:
	* b2m.c: Likewise.

2010-07-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* make-docfile.c (xmalloc, xrealloc, concat, readline, fatal):
	* b2m.c (scan_file, scan_lisp_file, scan_c_file): Convert to
	standard C prototypes.

2010-07-02  Jan Djärv  <jan.h.d@swipnet.se>

	* ebrowse.c: Remove P_ and __P.
	* etags.c:
	* movemail.c:
	* pop.c:
	* update-game-score.c: Likewise.

2010-06-24  Juanma Barranquero  <lekktu@gmail.com>

	* movemail.c (error): Avoid warning when there are no args.

2010-06-11  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (lisp2): Fix references to vc/vc-hooks.elc
	and vc/ediff-hook.elc.

2010-06-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* ntlib.h: Remove code dealing with BSTRING.

2010-05-29  Chong Yidong  <cyd@stupidchicken.com>

	* emacsclient.c (longopts, decode_options, print_help_and_exit):
	New arg `-parent-id'.
	(main): Send parent-id to Emacs.

2010-05-27  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (distclean): No more Makefile.c.

2010-05-22  Jan Djärv  <jan.h.d@swipnet.se>

	* Makefile.in (STAMP_INST_SCRIPTS, STAMP_SCRIPS): New (Bug #6246).
	(all): Depend onSTAMP_INST_SCRIPTS, STAMP_SCRIPS (Bug #6246).
	(stamp-rcs2log, stamp-rcs-checkin, stamp-grep-changelog, stamp-vcdiff):
	New rules (Bug #6246).
	(clean): Remove stamp-* (Bug #6246).
