@@ -1,3 +1,9 @@
+2010-07-03  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* sorted-doc.c (cmpdoc): Fix signature.
+	(qsort_compare): Delete.
+	(main): Remove cast.
+
 2010-07-03  Juanma Barranquero  <lekktu@gmail.com>
 
 	* ebrowse.c (match_qualified_namespace_alias): Check for null pointer.
